--- a/PatientMonitor/BedsideMonitoring.xaml
+++ b/PatientMonitor/BedsideMonitoring.xaml
@@ -17,7 +17,7 @@
             </Label.Background>
 
         </Label>
-        <ComboBox x:Name="comboBox2" HorizontalAlignment="Left" Height="31" Margin="305,166,0,0" VerticalAlignment="Top" Width="214" SelectionChanged="comboBox_SelectionChanged"/>
+        <ComboBox x:Name="comboBox2" HorizontalAlignment="Left" Height="31" Margin="305,166,0,0" VerticalAlignment="Top" Width="214"/>
         <Label x:Name="label6" Content="Bay No" HorizontalAlignment="Left" Height="57" Margin="221,166,0,0" VerticalAlignment="Top" Width="133" FontSize="18.667"/>
         <ComboBox x:Name="comboBox3" HorizontalAlignment="Left" Height="31" Margin="770,166,0,0" VerticalAlignment="Top" Width="214"/>
         <Label x:Name="label7" Content="Ward No" HorizontalAlignment="Left" Height="74" Margin="678,166,0,0" VerticalAlignment="Top" Width="194" FontSize="18.667"/>
