--- a/PatientMonitor/monitoringandalarmdetails.xaml
+++ b/PatientMonitor/monitoringandalarmdetails.xaml
@@ -1,28 +1,17 @@
 ﻿<Window x:Class="PatientMonitor.monitoringandalarmdetails"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="monitoringandalarmdetails" Height="704" Width="1139.55">
+        Title="monitoringandalarmdetails" Height="704" Width="1139.55" xmlns:my="clr-namespace:PatientMonitor">
     <Grid Height="637.228" Width="1107.065" Background="#FF307E7A">
         <Label Name="lblSent" Height="29" Width="145" FontSize="11" FontFamily="Microsoft Sans Serif" TabIndex="33" Visibility="Hidden" Foreground="White" Background="Red" Margin="534,500,116,32" HorizontalAlignment="Right" VerticalAlignment="Bottom" >MESSAGE SENT</Label>
         <Label Name="label11" Height="22" Width="9" FontSize="11" FontFamily="Microsoft Sans Serif" TabIndex="18"  Margin="76,486,710,53" HorizontalAlignment="Right" VerticalAlignment="Bottom" ></Label>
         <Label Name="label4" Height="58" Width="265" FontSize="18.667" FontFamily="Microsoft Sans Serif" TabIndex="6" Foreground="Black" Background="White" Margin="0,0,832.065,554.228" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Monitoring and Alarm Details</Label>
-        <Label Content="Mute Alarm" HorizontalAlignment="Left" Height="32" Margin="44,151,0,0" VerticalAlignment="Top" Width="127"/>
-        <RadioButton Content="Yes" HorizontalAlignment="Left" Height="62" Margin="119,156,0,0" VerticalAlignment="Top" Width="101"/>
-        <RadioButton Content="No" HorizontalAlignment="Left" Height="61" Margin="171,156,0,0" VerticalAlignment="Top" Width="82"/>
-        <Label Content="Select/Change Module" HorizontalAlignment="Left" Height="92" Margin="26,257,0,0" VerticalAlignment="Top" Width="155"/>
-        <ComboBox x:Name="cboModule" HorizontalAlignment="Left" Height="20" Margin="175,262,0,0" VerticalAlignment="Top" Width="177"/>
-        <Label Content="Set Limits" HorizontalAlignment="Left" Height="63" Margin="44,328,0,0" VerticalAlignment="Top" Width="122"/>
-        <Label Content="Upper limit" HorizontalAlignment="Left" Height="37" Margin="63,354,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="Lower Limit" HorizontalAlignment="Left" Height="37" Margin="63,391,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="152,495,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
-        <Label Content="" HorizontalAlignment="Left" Height="22" Margin="143,396,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
-        <Label Content="Display Alarm" HorizontalAlignment="Left" Height="43" Margin="34,452,0,0" VerticalAlignment="Top" Width="165"/>
         <Label Content="Time Set Off" HorizontalAlignment="Left" Height="76" Margin="54,486,0,0" VerticalAlignment="Top" Width="112"/>
         <Label Content="Time Rectified" HorizontalAlignment="Left" Height="65" Margin="54,519,0,0" VerticalAlignment="Top" Width="115"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="152,526,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
-        <Label Content="" HorizontalAlignment="Left" Height="22" Margin="143,359,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
         <Label Content="Previous Alarms" HorizontalAlignment="Left" Height="63" Margin="758,328,0,0" VerticalAlignment="Top" Width="122"/>
-        <Label Content="" HorizontalAlignment="Left" Height="72" Margin="747,359,0,0" VerticalAlignment="Top" Width="199" Background="White"/>
+        <Label Name="PreviosAlarms" Content="" HorizontalAlignment="Left" Height="72" Margin="747,359,0,0" VerticalAlignment="Top" Width="199" Background="White"/>
         <Label Content="Management" HorizontalAlignment="Left" Height="63" Margin="747,468,0,0" VerticalAlignment="Top" Width="122"/>
         <Label Content="Sent alert by email" HorizontalAlignment="Left" Height="63" Margin="747,499,0,0" VerticalAlignment="Top" Width="122"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="874,501,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
@@ -36,6 +25,26 @@
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="846,93,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="846,129,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="846,161,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
-        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Height="29" Margin="450,590,0,0" VerticalAlignment="Top" Width="111"/>
+        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Height="29" Margin="450,590,0,0" VerticalAlignment="Top" Width="111" Click="btnExit_Click" />
+        <Grid Height="327" Width="446" Margin="30,150,631.065,160.228">
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="227,39,0,0" x:Name="heartRateLower" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="227,90,0,0" x:Name="breathingRateLower" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="227,141,0,0" x:Name="systolicLower" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="227,192,0,0" x:Name="diastolicLower" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="333,39,0,0" x:Name="heartRateUpper" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="333,90,0,0" x:Name="breathingRateUpper" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="333,141,0,0" x:Name="systolicUpper" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="333,192,0,0" x:Name="diastolicUpper" VerticalAlignment="Top" />
+            <Label Content="Lower Limits" Height="28" HorizontalAlignment="Left" Margin="227,6,0,0" Name="label5" VerticalAlignment="Top" ClipToBounds="False" />
+            <Label Content="Upper Limits" Height="28" HorizontalAlignment="Left" Margin="332,6,0,0" Name="label6" VerticalAlignment="Top" ClipToBounds="False" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="227,243,0,0" x:Name="temperatureLower" VerticalAlignment="Top" />
+            <my:NumericUpDown HorizontalAlignment="Left" Margin="333,243,0,0" x:Name="temperatureUpper" VerticalAlignment="Top" />
+            <Label Content="Heart Rate" Height="44" HorizontalAlignment="Left" Margin="12,39,0,0" Name="label1" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Breathing Rate" Height="44" HorizontalAlignment="Left" Margin="12,90,0,0" Name="label2" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Systolic Pressure" Height="44" HorizontalAlignment="Left" Margin="12,141,0,0" Name="label3" VerticalAlignment="Top" Width="117" ClipToBounds="True" FontSize="14" />
+            <Label Content="Diastolic Pressure" Height="44" HorizontalAlignment="Left" Margin="12,192,0,0" Name="label14" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <Label Content="Temperature" Height="44" HorizontalAlignment="Left" Margin="12,243,0,0" Name="label7" VerticalAlignment="Top" Width="117" FontSize="14" />
+            <CheckBox Content="Mute Alarm" Height="18" HorizontalAlignment="Left" Margin="12,298,0,0" Name="AlarmMute" VerticalAlignment="Top" Width="96" />
+        </Grid>
     </Grid>
 </Window>
