--- a/PatientMonitor/monitoringandalarmdetails.xaml
+++ b/PatientMonitor/monitoringandalarmdetails.xaml
@@ -17,8 +17,8 @@
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="874,501,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
         <Label Content="Sent alert by SMS" HorizontalAlignment="Left" Height="63" Margin="747,526,0,0" VerticalAlignment="Top" Width="122"/>
         <Label Content="" HorizontalAlignment="Left" Height="22" Margin="874,528,0,0" VerticalAlignment="Top" Width="123" Background="White"/>
-        <Button x:Name="btnSendEMAIL" Content="Send" HorizontalAlignment="Left" Height="22" Margin="1016,501,0,0" VerticalAlignment="Top" Width="73" Click="btnSendEMAIL_Click"/>
-        <Button x:Name="btnSendSMS" Content="Send" HorizontalAlignment="Left" Height="19" Margin="1016,531,0,0" VerticalAlignment="Top" Width="73" Click="btnSendSMS_Click"/>
+        <Button x:Name="btnSendEMAIL" Content="Send" HorizontalAlignment="Left" Height="22" Margin="1016,501,0,0" VerticalAlignment="Top" Width="73"/>
+        <Button x:Name="btnSendSMS" Content="Send" HorizontalAlignment="Left" Height="19" Margin="1016,531,0,0" VerticalAlignment="Top" Width="73"/>
         <Label Content="Bay No" HorizontalAlignment="Left" Height="63" Margin="773,86,0,0" VerticalAlignment="Top" Width="122"/>
         <Label Content="Bed No" HorizontalAlignment="Left" Height="63" Margin="773,120,0,0" VerticalAlignment="Top" Width="122"/>
         <Label Content="Name" HorizontalAlignment="Left" Height="63" Margin="773,156,0,0" VerticalAlignment="Top" Width="122"/>
