--- a/PatientMonitor/MainWindow.xaml
+++ b/PatientMonitor/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
        
         mc:Ignorable="d"
-        Title="MainWindow" Height="637.228" Width="1107.065">
+        Title="East Anglia Hospital Trust" Height="637.228" Width="1107.065">
     <Grid Background="#FF307E7A">
         <Label x:Name="label" Content="East Anglia Hospital Trust" HorizontalAlignment="Left" Height="197" Margin="251,95,0,0" VerticalAlignment="Top" Width="685" FontSize="53.333"/>
         <Button x:Name="btnBedsideMonitoring" Content="Bedside Monitoring" HorizontalAlignment="Left" Height="142" Margin="179,292,0,0" VerticalAlignment="Top" Width="206" FontFamily="Microsoft Sans Serif" FontSize="22.667" Click="btnBedsideMonitoring_Click"/>
