--- a/PatientMonitor/MainWindowInterface.xaml
+++ b/PatientMonitor/MainWindowInterface.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PatientMonitor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="899.204" Width="1443.674" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
+        Title="Central Monitorig System" Height="899.204" Width="1443.674" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
     <Window.Resources>
         <my:DatabaseDataSet x:Key="databaseDataSet"/>
         <CollectionViewSource x:Key="patientViewSource" Source="{Binding Patient, Source={StaticResource databaseDataSet}}"/>
@@ -45,60 +45,59 @@
         <Label x:Name="label3_Copy6" Content="Breathing Rate" HorizontalAlignment="Left" Margin="434,159,0,0" VerticalAlignment="Top" Width="92" FontSize="28"/>
         <Label x:Name="label3_Copy7" Content="Temp" HorizontalAlignment="Left" Margin="818,159,0,0" VerticalAlignment="Top" Width="102" FontSize="28"/>
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,200,0,0" Name="pulseRate" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,200,0,0" Name="breathingRate" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,200,0,0" Name="systolic" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,200,0,0" Name="diastolic" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,200,0,0" Name="temperature" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,200,0,0" Name="pulseRate" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,200,0,0" Name="breathingRate" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,200,0,0" Name="systolic" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,200,0,0" Name="diastolic" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,200,0,0" Name="temperature" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,242,0,0" Name="pulseRate1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,237,0,0" Name="breathingRate1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,237,0,0" Name="systolic1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,242,0,0" Name="diastolic1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,237,0,0" Name="temperature1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,242,0,0" Name="pulseRate1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,237,0,0" Name="breathingRate1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,237,0,0" Name="systolic1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,242,0,0" Name="diastolic1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,237,0,0" Name="temperature1" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,281,0,0" Name="pulseRate2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,281,0,0" Name="breathingRate2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,281,0,0" Name="systolic2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,286,0,0" Name="diastolic2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,281,0,0" Name="temperature2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,281,0,0" Name="pulseRate2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,281,0,0" Name="breathingRate2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,281,0,0" Name="systolic2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,286,0,0" Name="diastolic2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,281,0,0" Name="temperature2" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,320,0,0" Name="pulseRate3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,320,0,0" Name="breathingRate3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,320,0,0" Name="systolic3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,325,0,0" Name="diastolic3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,320,0,0" Name="temperature3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,320,0,0" Name="pulseRate3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,320,0,0" Name="breathingRate3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,320,0,0" Name="systolic3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,325,0,0" Name="diastolic3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,320,0,0" Name="temperature3" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,359,0,0" x:Name="pulseRate4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,359,0,0" x:Name="breathingRate4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,359,0,0" x:Name="systolic4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,364,0,0" x:Name="diastolic4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,359,0,0" x:Name="temperature4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,359,0,0" x:Name="pulseRate4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,359,0,0" x:Name="breathingRate4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,359,0,0" x:Name="systolic4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,364,0,0" x:Name="diastolic4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,359,0,0" x:Name="temperature4" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,403,0,0" x:Name="pulseRate5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,403,0,0" x:Name="breathingRate5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,403,0,0" x:Name="systolic5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,408,0,0" x:Name="diastolic5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,403,0,0" x:Name="temperature5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,403,0,0" x:Name="pulseRate5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,403,0,0" x:Name="breathingRate5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,403,0,0" x:Name="systolic5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,408,0,0" x:Name="diastolic5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,403,0,0" x:Name="temperature5" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,445,0,0" x:Name="pulseRate6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,445,0,0" x:Name="breathingRate6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,445,0,0" x:Name="systolic6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,450,0,0" x:Name="diastolic6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,445,0,0" x:Name="temperature6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,445,0,0" x:Name="pulseRate6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,445,0,0" x:Name="breathingRate6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,445,0,0" x:Name="systolic6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,450,0,0" x:Name="diastolic6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,445,0,0" x:Name="temperature6" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
 
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,485,0,0" x:Name="pulseRate7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,485,0,0" x:Name="breathingRate7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,485,0,0" x:Name="systolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,490,0,0" x:Name="diastolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,485,0,0" x:Name="temperature7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="#FF0000C5" />
-        <CheckBox Content="Mute Alarm" Height="18" HorizontalAlignment="Left" Margin="923,215,0,0" Name="AlarmMute" VerticalAlignment="Top" Width="96" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="348,485,0,0" x:Name="pulseRate7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="461,485,0,0" x:Name="breathingRate7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="589,485,0,0" x:Name="systolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="727,490,0,0" x:Name="diastolic7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Label Content="0" Height="44" HorizontalAlignment="Left" Margin="834,485,0,0" x:Name="temperature7" VerticalAlignment="Top" Width="86" FontSize="28" Foreground="Cyan" />
+        <Button x:Name="MuteAlarmbutton" Content="Mute" HorizontalAlignment="Left" Margin="1159,339,0,0" VerticalAlignment="Top" Width="75" Click="MuteAlarmbutton_Click"/>
         <TextBox  Name="txtNHS" HorizontalAlignment="Left" Height="28" Margin="1087,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
         <TextBox Name="txtName" HorizontalAlignment="Left" Height="28" Margin="1087,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
         <TextBox Name="txtBed" HorizontalAlignment="Left" Height="28" Margin="1087,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115"/>
-        <Button Name="buttonAddCustomer" Content="Add New" HorizontalAlignment="Left" Height="28" Margin="1281,100,0,0" VerticalAlignment="Top" Width="81" Click="buttonAddCustomer_Click"/>
-        <Button Name="buttonDeleteCustomer" Content="Delete" HorizontalAlignment="Left" Height="28" Margin="1281,154,0,0" VerticalAlignment="Top" Width="81" Click="buttonDeleteCustomer_Click" />
-        <Button Name="buttonUpdateCustomer" Content="Update" HorizontalAlignment="Left" Height="25" Margin="1281,208,0,0" VerticalAlignment="Top" Width="81" Click="buttonUpdateCustomer_Click"/>
+        <Button Name="buttonAddPatient" Content="Add New" HorizontalAlignment="Left" Height="28" Margin="1281,100,0,0" VerticalAlignment="Top" Width="81" Click="buttonAddPatient_Click"/>
+        <Button Name="buttonDeletePatient" Content="Delete" HorizontalAlignment="Left" Height="28" Margin="1281,154,0,0" VerticalAlignment="Top" Width="81" Click="buttonDeletePatient_Click" />
         <Label Content="NHS number:" HorizontalAlignment="Left" Height="32" Margin="993,101,0,0" VerticalAlignment="Top" Width="94"/>
         <Label Content="Name:" HorizontalAlignment="Left" Height="28" Margin="1024,154,0,0" VerticalAlignment="Top" Width="45"/>
         <Label Content="Bed No:" HorizontalAlignment="Left" Height="25" Margin="1024,207,0,0" VerticalAlignment="Top" Width="58"/>
@@ -160,6 +159,17 @@
             <Label Content="Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="-104,-18,0,24" Grid.Row="0" VerticalAlignment="Center"/>
             <TextBox x:Name="nameTextBox2" HorizontalAlignment="Left" Height="23" Margin="-54,-16,0,25" Grid.Row="0" Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" Grid.ColumnSpan="2"/>
         </Grid>
+        <ComboBox x:Name="mutePatientSelector" HorizontalAlignment="Left" Margin="1024,337,0,0" VerticalAlignment="Top" Width="120" SelectedValuePath="Content">
+        <ComboBoxItem Name="Bed1" >1</ComboBoxItem>
+        <ComboBoxItem Name="Bed2" >2</ComboBoxItem>
+        <ComboBoxItem Name="Bed3" >3</ComboBoxItem>
+        <ComboBoxItem Name="Bed4" >4</ComboBoxItem>
+        <ComboBoxItem Name="Bed5" >5</ComboBoxItem>
+        <ComboBoxItem Name="Bed6" >6</ComboBoxItem>
+        <ComboBoxItem Name="Bed7" >7</ComboBoxItem>
+        <ComboBoxItem Name="Bed8" >8</ComboBoxItem>
+        </ComboBox>
+        <Label Content="Bed number:" HorizontalAlignment="Left" Height="24" Margin="1024,308,0,0" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
