--- a/PatientMonitor/Bedside monitor.xaml
+++ b/PatientMonitor/Bedside monitor.xaml
@@ -1,13 +1,13 @@
 ﻿<Window x:Class="PatientMonitor.BedsideMonitoringStation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Central Monitorig System" Height="899.204" Width="1443.674" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
+        Title="Bedside Monitorig System" Height="899.204" Width="1443.674" xmlns:my="clr-namespace:PatientMonitor" Loaded="Window_Loaded">
     <Window.Resources>
         <my:DatabaseDataSet x:Key="databaseDataSet"/>
         <CollectionViewSource x:Key="patientViewSource" Source="{Binding Patient, Source={StaticResource databaseDataSet}}"/>
     </Window.Resources>
     <Grid Background="#FF307E7A" DataContext="{StaticResource patientViewSource}">
-        <Label x:Name="label" Content="Central Monitoring System" HorizontalAlignment="Left" Height="70" Margin="37,49,0,0" VerticalAlignment="Top" Width="241" FontSize="18.667" FontFamily="Microsoft Sans Serif">
+        <Label x:Name="label" Content="Bedside Monitoring System" HorizontalAlignment="Left" Height="70" Margin="37,49,0,0" VerticalAlignment="Top" Width="241" FontSize="18.667" FontFamily="Microsoft Sans Serif">
             <Label.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
